Fix cookie message on smaller devices. (#520)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -100,7 +100,7 @@ form {
 
 #cookie-message-inner {
     padding: 20px;
-    width: 800px;
+    width: 90%;
     margin: 0 auto;
 }
 
